# data-eng-kafka

./: README.md  compose.yml  hello.py  pyproject.toml  requirements.txt
dags/: kafka_stream.py
